--- a/Makefile.in
+++ b/Makefile.in
@@ -79,7 +79,8 @@ am_bullwhip_OBJECTS = Actor.$(OBJEXT) \
 	ent_item.$(OBJEXT) ent_string.$(OBJEXT) \
 	game_setglobal.$(OBJEXT) game_spawnpoint.$(OBJEXT) \
 	phys_dynamic.$(OBJEXT) phys_static.$(OBJEXT) \
-	tele_coord.$(OBJEXT) tele_obj.$(OBJEXT)
+	tele_coord.$(OBJEXT) tele_obj.$(OBJEXT) LevelEditor.$(OBJEXT) \
+	LevelEntity.$(OBJEXT)
 bullwhip_OBJECTS = $(am_bullwhip_OBJECTS)
 bullwhip_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I.@am__isrc@
@@ -209,7 +210,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-bullwhip_SOURCES = Actor.cpp BullwhipContactListener.cpp Constants.cpp Definition.cpp Entity.cpp File.cpp Game.cpp ImageManager.cpp Item.cpp JMath.cpp MainMenuState.cpp PlayState.cpp Player.cpp SceneManager.cpp State.cpp StateManager.cpp Vec2.cpp main.cpp PhysicsWrappers/BoxDynamicBody.cpp PhysicsWrappers/BoxStaticBody.cpp PhysicsWrappers/BoxTriggerBody.cpp PhysicsWrappers/BoxWorld.cpp entites/InvisEntity.cpp entites/InvisPhysEntity.cpp entites/ent_item.cpp entites/ent_string.cpp entites/game_setglobal.cpp entites/game_spawnpoint.cpp entites/phys_dynamic.cpp entites/phys_static.cpp entites/tele_coord.cpp entites/tele_obj.cpp
+bullwhip_SOURCES = Actor.cpp BullwhipContactListener.cpp Constants.cpp Definition.cpp Entity.cpp File.cpp Game.cpp ImageManager.cpp Item.cpp JMath.cpp MainMenuState.cpp PlayState.cpp Player.cpp SceneManager.cpp State.cpp StateManager.cpp Vec2.cpp main.cpp PhysicsWrappers/BoxDynamicBody.cpp PhysicsWrappers/BoxStaticBody.cpp PhysicsWrappers/BoxTriggerBody.cpp PhysicsWrappers/BoxWorld.cpp entites/InvisEntity.cpp entites/InvisPhysEntity.cpp entites/ent_item.cpp entites/ent_string.cpp entites/game_setglobal.cpp entites/game_spawnpoint.cpp entites/phys_dynamic.cpp entites/phys_static.cpp entites/tele_coord.cpp entites/tele_obj.cpp editor/LevelEditor.cpp editor/LevelEntity.cpp
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
@@ -330,6 +331,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/InvisPhysEntity.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Item.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/JMath.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/LevelEditor.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/LevelEntity.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/MainMenuState.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/PlayState.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Player.Po@am__quote@
@@ -556,6 +559,34 @@ tele_obj.obj: entites/tele_obj.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='entites/tele_obj.cpp' object='tele_obj.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o tele_obj.obj `if test -f 'entites/tele_obj.cpp'; then $(CYGPATH_W) 'entites/tele_obj.cpp'; else $(CYGPATH_W) '$(srcdir)/entites/tele_obj.cpp'; fi`
+
+LevelEditor.o: editor/LevelEditor.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT LevelEditor.o -MD -MP -MF $(DEPDIR)/LevelEditor.Tpo -c -o LevelEditor.o `test -f 'editor/LevelEditor.cpp' || echo '$(srcdir)/'`editor/LevelEditor.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/LevelEditor.Tpo $(DEPDIR)/LevelEditor.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='editor/LevelEditor.cpp' object='LevelEditor.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o LevelEditor.o `test -f 'editor/LevelEditor.cpp' || echo '$(srcdir)/'`editor/LevelEditor.cpp
+
+LevelEditor.obj: editor/LevelEditor.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT LevelEditor.obj -MD -MP -MF $(DEPDIR)/LevelEditor.Tpo -c -o LevelEditor.obj `if test -f 'editor/LevelEditor.cpp'; then $(CYGPATH_W) 'editor/LevelEditor.cpp'; else $(CYGPATH_W) '$(srcdir)/editor/LevelEditor.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/LevelEditor.Tpo $(DEPDIR)/LevelEditor.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='editor/LevelEditor.cpp' object='LevelEditor.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o LevelEditor.obj `if test -f 'editor/LevelEditor.cpp'; then $(CYGPATH_W) 'editor/LevelEditor.cpp'; else $(CYGPATH_W) '$(srcdir)/editor/LevelEditor.cpp'; fi`
+
+LevelEntity.o: editor/LevelEntity.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT LevelEntity.o -MD -MP -MF $(DEPDIR)/LevelEntity.Tpo -c -o LevelEntity.o `test -f 'editor/LevelEntity.cpp' || echo '$(srcdir)/'`editor/LevelEntity.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/LevelEntity.Tpo $(DEPDIR)/LevelEntity.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='editor/LevelEntity.cpp' object='LevelEntity.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o LevelEntity.o `test -f 'editor/LevelEntity.cpp' || echo '$(srcdir)/'`editor/LevelEntity.cpp
+
+LevelEntity.obj: editor/LevelEntity.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT LevelEntity.obj -MD -MP -MF $(DEPDIR)/LevelEntity.Tpo -c -o LevelEntity.obj `if test -f 'editor/LevelEntity.cpp'; then $(CYGPATH_W) 'editor/LevelEntity.cpp'; else $(CYGPATH_W) '$(srcdir)/editor/LevelEntity.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/LevelEntity.Tpo $(DEPDIR)/LevelEntity.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='editor/LevelEntity.cpp' object='LevelEntity.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o LevelEntity.obj `if test -f 'editor/LevelEntity.cpp'; then $(CYGPATH_W) 'editor/LevelEntity.cpp'; else $(CYGPATH_W) '$(srcdir)/editor/LevelEntity.cpp'; fi`
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
